<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/c_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="50dp"
        android:text="@string/login_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/c_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/c_login_text"
        android:layout_below="@+id/c_login_text"
        android:layout_marginTop="27dp"
        android:text="@string/password_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/c_repeat_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/c_login_text"
        android:layout_below="@+id/c_password_text"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:text="@string/repeat_password_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/c_year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/c_login_text"
        android:layout_below="@+id/c_repeat_password_text"
        android:layout_marginTop="27dp"
        android:text="@string/year_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/c_login_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/c_login_text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:inputType="text" />
    
     <EditText
        android:id="@+id/c_password_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_login_input"
        android:layout_alignBottom="@+id/c_password_text"
        android:inputType="textPassword" />
     
     <EditText
        android:id="@+id/c_repeat_password_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/c_login_input"
        android:layout_alignBottom="@+id/c_repeat_password_text"
        android:inputType="textPassword" />

     <Spinner
         android:id="@+id/c_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/c_year_text"
         android:layout_alignLeft="@+id/c_login_input"
         android:prompt="@string/year_prompt" />

    <Button
        android:id="@+id/c_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c_year_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/c_create_account_button" />
    
</RelativeLayout>