<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp" >
	
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_text" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/login_text"
        android:layout_below="@+id/login_text"
        android:layout_marginTop="26dp"
        android:text="@string/password_text" />

    <EditText
        android:id="@+id/login_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/login_text"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/login_text"
        android:inputType="text">"
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_input"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_input"
        android:layout_alignTop="@+id/password_text"
        android:layout_below="@+id/login_input"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/create_account_button" />
</RelativeLayout>